tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c: In function ‘bfs_shortest_path’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:176:17: error: expected expression before ‘;’ token
  176 |         queue = ;
      |                 ^
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:180:37: error: ‘graph_lens’ undeclared (first use in this function); did you mean ‘path_len’?
  180 |             size_t neighbours_len = graph_lens[node];
      |                                     ^~~~~~~~~~
      |                                     path_len
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:180:37: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c: In function ‘bfs_shortest_path_distance’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:234:26: error: ‘graph_lens’ undeclared (first use in this function)
  234 |         size_t adj_len = graph_lens[node];
      |                          ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:45: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                             ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:45: note: (near initialization for ‘demo_graph_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:64: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:64: note: (near initialization for ‘demo_graph_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:83: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                                   ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:83: note: (near initialization for ‘demo_graph_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:102: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                                                      ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:102: note: (near initialization for ‘demo_graph_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:121: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                                                                         ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:121: note: (near initialization for ‘demo_graph_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:140: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                                                                                            ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:140: note: (near initialization for ‘demo_graph_vals[5]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:159: error: initializer element is not constant
  260 |         static void* demo_graph_vals[23] = {demo_graph_vals_0, demo_graph_vals_1, demo_graph_vals_2, demo_graph_vals_3, demo_graph_vals_4, demo_graph_vals_5, demo_graph_vals_6};
      |                                                                                                                                                               ^~~~~~~~~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_shortest_path_2.c:260:159: note: (near initialization for ‘demo_graph_vals[6]’)
